--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   padding: 20px;
-  background: #e1e1e1;
+  background: #eee;
 }
 .spandex{
   height: auto;
@@ -42,6 +42,12 @@ body{
 }
 .box .badge{
  position: absolute;
+ background: rgba(0,0,0,0.5);
+ width: 100%;
+ color: white;
+ padding: 2px;
+ left: -2px;
+ font-family: monospace;
 }
 .box .logo{
   height: 120px;
@@ -61,19 +67,24 @@ body{
   left: 0;
   right: 0;
   margin: auto;
-  
+
 }
 .more{
   border: none;
   background: none;
   height: 100%;
   box-sizing: border-box;
-  font-size: 40px;
+  font-size: 20px;
+  cursor: pointer;
 }
 .box.absolute{
   width: 30px;
   padding: 0;
   position: absolute;
+  opacity: 0.5;
   right: 0;
   top: 0;
+}
+.box.absolute:hover{
+  opacity: 1;
 }
